# tinyproto

./: Cargo.toml  README.md
examples/: example.proto  nodejs_template.hb  rust_axum_template.handlebars
resources/: example.proto  html_template.hb  template.hbs
src/: main.rs  template.rs
src/proto/: descriptor.rs  mod.rs  parser.rs  token.rs
