[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = "4.2"
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf-codegen-pure = "2.27"
tempfile = "3.3"
openapiv3 = "1.0"
serde_yaml = "0.8"
nom = "7.1"